--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -262,6 +262,13 @@ main #highscore_table .highscore_table_row:hover {
   transition-timing-function: linear;
 }
 /* line 238, ../sass/tictactoe.scss */
+main #highscore_table .highscore_table_row .highscore_table_db_err {
+  text-align: center;
+  display: table-cell;
+  color: #ee0000;
+  font-style: italic;
+}
+/* line 245, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row .highscore_table_cell {
   text-align: center;
   display: table-cell;
@@ -269,22 +276,22 @@ main #highscore_table .highscore_table_row .highscore_table_cell {
   border-width: 1px;
   border-color: #ccc;
 }
-/* line 242, ../sass/tictactoe.scss */
+/* line 249, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row .highscore_table_cell:last-child {
   border-right: none;
 }
-/* line 249, ../sass/tictactoe.scss */
+/* line 256, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row_caption {
   display: table-row;
 }
-/* line 251, ../sass/tictactoe.scss */
+/* line 258, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row_caption .highscore_table_caption {
   font-weight: bold;
   border-bottom: solid;
   border-color: #ccc;
   border-width: 1px;
 }
-/* line 259, ../sass/tictactoe.scss */
+/* line 266, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row_caption .highscore_table_cell {
   text-align: center;
   display: table-cell;
@@ -292,18 +299,18 @@ main #highscore_table .highscore_table_row_caption .highscore_table_cell {
   border-width: 1px;
   border-color: #ccc;
 }
-/* line 263, ../sass/tictactoe.scss */
+/* line 270, ../sass/tictactoe.scss */
 main #highscore_table .highscore_table_row_caption .highscore_table_cell:last-child {
   border-right: none;
 }
 
-/* line 273, ../sass/tictactoe.scss */
+/* line 280, ../sass/tictactoe.scss */
 #socialbuttons {
   margin-top: 10px;
   margin-right: auto;
   margin-left: auto;
 }
-/* line 277, ../sass/tictactoe.scss */
+/* line 284, ../sass/tictactoe.scss */
 #socialbuttons div {
   width: 150px;
   display: inline;
@@ -315,19 +322,19 @@ main #highscore_table .highscore_table_row_caption .highscore_table_cell:last-ch
   height: 34px;*/
 }
 
-/* line 291, ../sass/tictactoe.scss */
+/* line 298, ../sass/tictactoe.scss */
 body {
   padding: 30px 0px;
 }
 
-/* line 295, ../sass/tictactoe.scss */
+/* line 302, ../sass/tictactoe.scss */
 #lightbox .modal-content {
   display: inline-block;
   text-align: center;
 }
 
 /****** LOGIN MODAL ******/
-/* line 301, ../sass/tictactoe.scss */
+/* line 308, ../sass/tictactoe.scss */
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
@@ -339,14 +346,14 @@ body {
   overflow: hidden;
 }
 
-/* line 312, ../sass/tictactoe.scss */
+/* line 319, ../sass/tictactoe.scss */
 .loginmodal-container h1 {
   text-align: center;
   font-size: 1.8em;
   font-family: Arial;
 }
 
-/* line 318, ../sass/tictactoe.scss */
+/* line 325, ../sass/tictactoe.scss */
 .loginmodal-container input[type=submit] {
   width: 100%;
   display: block;
@@ -354,7 +361,7 @@ body {
   position: relative;
 }
 
-/* line 325, ../sass/tictactoe.scss */
+/* line 332, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text], input[type=password] {
   height: 44px;
   font-size: 16px;
@@ -370,7 +377,7 @@ body {
   -moz-box-sizing: border-box;
 }
 
-/* line 340, ../sass/tictactoe.scss */
+/* line 347, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text], input[type=password] {
   height: 44px;
   font-size: 16px;
@@ -386,7 +393,7 @@ body {
   -moz-box-sizing: border-box;
 }
 
-/* line 355, ../sass/tictactoe.scss */
+/* line 362, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
@@ -395,7 +402,7 @@ body {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* line 363, ../sass/tictactoe.scss */
+/* line 370, ../sass/tictactoe.scss */
 .loginmodal {
   text-align: center;
   font-size: 14px;
@@ -408,7 +415,7 @@ body {
     user-select: none; */
 }
 
-/* line 375, ../sass/tictactoe.scss */
+/* line 382, ../sass/tictactoe.scss */
 .loginmodal-submit {
   /* border: 1px solid #3079ed; */
   border: 0px;
@@ -420,7 +427,7 @@ body {
   /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
 }
 
-/* line 386, ../sass/tictactoe.scss */
+/* line 393, ../sass/tictactoe.scss */
 .loginmodal-submit:hover {
   /* border: 1px solid #2f5bb7; */
   border: 0px;
@@ -429,7 +436,7 @@ body {
   /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
 }
 
-/* line 394, ../sass/tictactoe.scss */
+/* line 401, ../sass/tictactoe.scss */
 .loginmodal-container a {
   text-decoration: none;
   color: #666;
@@ -440,7 +447,7 @@ body {
   transition: opacity ease 0.5s;
 }
 
-/* line 404, ../sass/tictactoe.scss */
+/* line 411, ../sass/tictactoe.scss */
 .login-help {
   font-size: 12px;
 }
