--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -310,7 +310,13 @@ main #highscore_table .highscore_table_row_caption .highscore_table_cell:last-ch
   margin-right: auto;
   margin-left: auto;
 }
-/* line 284, ../sass/tictactoe.scss */
+@media only screen and (max-width: 500px) {
+  /* line 280, ../sass/tictactoe.scss */
+  #socialbuttons {
+    display: none;
+  }
+}
+/* line 288, ../sass/tictactoe.scss */
 #socialbuttons div {
   width: 150px;
   display: inline;
@@ -322,19 +328,19 @@ main #highscore_table .highscore_table_row_caption .highscore_table_cell:last-ch
   height: 34px;*/
 }
 
-/* line 298, ../sass/tictactoe.scss */
+/* line 303, ../sass/tictactoe.scss */
 body {
   padding: 30px 0px;
 }
 
-/* line 302, ../sass/tictactoe.scss */
+/* line 307, ../sass/tictactoe.scss */
 #lightbox .modal-content {
   display: inline-block;
   text-align: center;
 }
 
 /****** LOGIN MODAL ******/
-/* line 308, ../sass/tictactoe.scss */
+/* line 313, ../sass/tictactoe.scss */
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
@@ -346,14 +352,14 @@ body {
   overflow: hidden;
 }
 
-/* line 319, ../sass/tictactoe.scss */
+/* line 324, ../sass/tictactoe.scss */
 .loginmodal-container h1 {
   text-align: center;
   font-size: 1.8em;
   font-family: Arial;
 }
 
-/* line 325, ../sass/tictactoe.scss */
+/* line 330, ../sass/tictactoe.scss */
 .loginmodal-container input[type=submit] {
   width: 100%;
   display: block;
@@ -361,7 +367,7 @@ body {
   position: relative;
 }
 
-/* line 332, ../sass/tictactoe.scss */
+/* line 337, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text], input[type=password] {
   height: 44px;
   font-size: 16px;
@@ -377,7 +383,7 @@ body {
   -moz-box-sizing: border-box;
 }
 
-/* line 347, ../sass/tictactoe.scss */
+/* line 352, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text], input[type=password] {
   height: 44px;
   font-size: 16px;
@@ -393,7 +399,7 @@ body {
   -moz-box-sizing: border-box;
 }
 
-/* line 362, ../sass/tictactoe.scss */
+/* line 367, ../sass/tictactoe.scss */
 .loginmodal-container input[type=text]:hover, input[type=password]:hover {
   border: 1px solid #b9b9b9;
   border-top: 1px solid #a0a0a0;
@@ -402,7 +408,7 @@ body {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* line 370, ../sass/tictactoe.scss */
+/* line 375, ../sass/tictactoe.scss */
 .loginmodal {
   text-align: center;
   font-size: 14px;
@@ -415,7 +421,7 @@ body {
     user-select: none; */
 }
 
-/* line 382, ../sass/tictactoe.scss */
+/* line 387, ../sass/tictactoe.scss */
 .loginmodal-submit {
   /* border: 1px solid #3079ed; */
   border: 0px;
@@ -427,7 +433,7 @@ body {
   /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
 }
 
-/* line 393, ../sass/tictactoe.scss */
+/* line 398, ../sass/tictactoe.scss */
 .loginmodal-submit:hover {
   /* border: 1px solid #2f5bb7; */
   border: 0px;
@@ -436,7 +442,7 @@ body {
   /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
 }
 
-/* line 401, ../sass/tictactoe.scss */
+/* line 406, ../sass/tictactoe.scss */
 .loginmodal-container a {
   text-decoration: none;
   color: #666;
@@ -447,7 +453,7 @@ body {
   transition: opacity ease 0.5s;
 }
 
-/* line 411, ../sass/tictactoe.scss */
+/* line 416, ../sass/tictactoe.scss */
 .login-help {
   font-size: 12px;
 }
